--- a/share/ufw-gtk.glade
+++ b/share/ufw-gtk.glade
@@ -564,6 +564,7 @@
                     <property name="model">rules_model</property>
                     <property name="headers_clickable">False</property>
                     <property name="search_column">0</property>
+                    <signal name="button_press_event" handler="on_rules_view_button_press_event"/>
                     <signal name="row_activated" handler="on_rules_view_row_activated"/>
                     <child>
                       <object class="GtkTreeViewColumn" id="treeviewcolumn5">
@@ -2284,5 +2285,49 @@ logo.png:
   <object class="GtkImage" id="image6">
     <property name="visible">True</property>
     <property name="stock">gtk-info</property>
+  </object>
+  <object class="GtkMenu" id="rule_menu">
+    <property name="visible">True</property>
+    <child>
+      <object class="GtkImageMenuItem" id="imagemenuitem17">
+        <property name="visible">True</property>
+        <property name="use_action_appearance">True</property>
+        <property name="related_action">rule_edit</property>
+        <property name="use_underline">True</property>
+        <property name="use_stock">True</property>
+      </object>
+    </child>
+    <child>
+      <object class="GtkImageMenuItem" id="imagemenuitem18">
+        <property name="visible">True</property>
+        <property name="use_action_appearance">True</property>
+        <property name="related_action">rule_delete</property>
+        <property name="use_underline">True</property>
+        <property name="use_stock">True</property>
+      </object>
+    </child>
+    <child>
+      <object class="GtkSeparatorMenuItem" id="separatormenuitem5">
+        <property name="visible">True</property>
+      </object>
+    </child>
+    <child>
+      <object class="GtkImageMenuItem" id="imagemenuitem19">
+        <property name="visible">True</property>
+        <property name="use_action_appearance">True</property>
+        <property name="related_action">rule_up</property>
+        <property name="use_underline">True</property>
+        <property name="use_stock">True</property>
+      </object>
+    </child>
+    <child>
+      <object class="GtkImageMenuItem" id="imagemenuitem20">
+        <property name="visible">True</property>
+        <property name="use_action_appearance">True</property>
+        <property name="related_action">rule_down</property>
+        <property name="use_underline">True</property>
+        <property name="use_stock">True</property>
+      </object>
+    </child>
   </object>
 </interface>
