--- a/share/ufw-gtk.ui
+++ b/share/ufw-gtk.ui
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <interface>
   <requires lib="gtk+" version="2.16"/>
   <!-- interface-naming-policy project-wide -->
@@ -968,7 +968,6 @@
     <property name="type_hint">dialog</property>
     <property name="skip_taskbar_hint">True</property>
     <property name="transient_for">main_window</property>
-    <property name="has_separator">False</property>
     <child internal-child="vbox">
       <object class="GtkVBox" id="dialog-vbox1">
         <property name="visible">True</property>
@@ -1022,7 +1021,7 @@
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="max_length">2</property>
-                                <property name="invisible_char">&#x2022;</property>
+                                <property name="invisible_char">•</property>
                                 <property name="width_chars">4</property>
                                 <property name="adjustment">position_adjustment</property>
                                 <property name="numeric">True</property>
@@ -1323,7 +1322,7 @@
                                       <object class="GtkEntry" id="src_addr_custom_entry">
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
-                                        <property name="invisible_char">&#x2022;</property>
+                                        <property name="invisible_char">•</property>
                                       </object>
                                       <packing>
                                         <property name="left_attach">1</property>
@@ -1419,7 +1418,7 @@
                                         <property name="visible">True</property>
                                         <property name="sensitive">False</property>
                                         <property name="can_focus">True</property>
-                                        <property name="invisible_char">&#x2022;</property>
+                                        <property name="invisible_char">•</property>
                                       </object>
                                       <packing>
                                         <property name="left_attach">1</property>
@@ -1604,7 +1603,7 @@
                                         <property name="visible">True</property>
                                         <property name="sensitive">False</property>
                                         <property name="can_focus">True</property>
-                                        <property name="invisible_char">&#x2022;</property>
+                                        <property name="invisible_char">•</property>
                                       </object>
                                       <packing>
                                         <property name="left_attach">1</property>
@@ -1699,7 +1698,7 @@
                                       <object class="GtkEntry" id="dst_port_custom_entry">
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
-                                        <property name="invisible_char">&#x2022;</property>
+                                        <property name="invisible_char">•</property>
                                       </object>
                                       <packing>
                                         <property name="left_attach">1</property>
@@ -1881,10 +1880,9 @@
     <property name="type_hint">dialog</property>
     <property name="skip_taskbar_hint">True</property>
     <property name="transient_for">main_window</property>
-    <property name="has_separator">False</property>
     <property name="program_name">ufw-gtk</property>
     <property name="version">0.2.0</property>
-    <property name="copyright" translatable="yes">Copyright &#xA9; 2010 Darwin M. Bautista</property>
+    <property name="copyright" translatable="yes">Copyright © 2010 Darwin M. Bautista</property>
     <property name="comments" translatable="yes">GTK+ frontend for UFW</property>
     <property name="website">http://code.google.com/p/ufw-frontends/</property>
     <property name="license" translatable="yes">This program is free software: you can redistribute it and/or modify
@@ -1941,7 +1939,6 @@ logo.png:
     <property name="type_hint">dialog</property>
     <property name="skip_taskbar_hint">True</property>
     <property name="transient_for">main_window</property>
-    <property name="has_separator">False</property>
     <child internal-child="vbox">
       <object class="GtkVBox" id="dialog-vbox3">
         <property name="visible">True</property>
@@ -2324,7 +2321,6 @@ logo.png:
     <property name="destroy_with_parent">True</property>
     <property name="type_hint">dialog</property>
     <property name="transient_for">main_window</property>
-    <property name="has_separator">False</property>
     <child internal-child="vbox">
       <object class="GtkVBox" id="dialog-vbox4">
         <property name="visible">True</property>
