--- a/share/ufw-gtk.ui
+++ b/share/ufw-gtk.ui
@@ -2128,6 +2128,18 @@ logo.png:
                     <property name="position">3</property>
                   </packing>
                 </child>
+                <child>
+                  <object class="GtkCheckButton" id="mod_saned_chkbox">
+                    <property name="label" translatable="yes">SANE daemon (saned)</property>
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="receives_default">False</property>
+                    <property name="draw_indicator">True</property>
+                  </object>
+                  <packing>
+                    <property name="position">4</property>
+                  </packing>
+                </child>
               </object>
               <packing>
                 <property name="position">1</property>
